--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "exports": "./mod.ts",
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "test": "deno test ./test/*"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
